// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerStatusBtn text correct with isCurrentUserActive = false 1`] = `
<button
  class="deactivatebtn btn btn-default"
  data-cy="deactivate"
  data-testid="activatebtn-input"
  placeholder="De-Activate?"
  style="color: green;"
  type="button"
>
  Re-Activate?
</button>
`;

exports[`PlayerStatusBtn text correct with isCurrentUserActive = true 1`] = `
<button
  class="deactivatebtn btn btn-default"
  data-cy="deactivate"
  data-testid="activatebtn-input"
  placeholder="De-Activate?"
  style="color: red;"
  type="button"
>
  De-Activate?
</button>
`;
